a little bit change

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/index.css" />
@@ -181,8 +180,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : +1 253-863-8967 <br />
-            M : contact@designo.co
+            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
             <svg
