--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -101,7 +101,7 @@
             class="loaction__img"
           />
           <h3 class="locations__title">CANADA</h3>
-          <a href="../locations/locations.html" class="btn btn-dark"
+          <a href="../locations/locations.html#canada" class="btn btn-dark"
             >SEE LOCATION</a
           >
         </div>
@@ -112,7 +112,7 @@
             class="loaction__img"
           />
           <h3 class="locations__title">AUSTRALIA</h3>
-          <a href="../locations/locations.html" class="btn btn-dark"
+          <a href="../locations/locations.html#australia" class="btn btn-dark"
             >SEE LOCATION</a
           >
         </div>
@@ -123,7 +123,7 @@
             class="loaction__img"
           />
           <h3 class="locations__title">UNITED KINGDOM</h3>
-          <a href="../locations/locations.html" class="btn btn-dark"
+          <a href="../locations/locations.html#uk" class="btn btn-dark"
             >SEE LOCATION</a
           >
         </div>
