--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -67,7 +67,9 @@
               type="text"
               placeholder="Your Message"
             />
-            <button style="border: 0; cursor:pointer;" class="btn btn-light">Submit</button>
+            <button style="border: 0; cursor: pointer" class="btn btn-light">
+              Submit
+            </button>
           </form>
         </div>
       </section>
@@ -136,8 +138,9 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : +1 253-863-8967 <br />
-            M : contact@designo.co
+            Contact Us (Central Office) <br />P :
+            <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
             <svg
