--- a/pages/locations/locations.html
+++ b/pages/locations/locations.html
@@ -49,7 +49,7 @@
     <main class="main">
       <!-- Canada Location -->
       <section class="location container">
-        <div class="loc__card ">
+        <div class="loc__card " id="canada">
           <div class="loc__text">
             <h2>Canada</h2>
             <div class="location-subtitle">
@@ -77,7 +77,7 @@
      
 
  
-        <div class="loc__card ">
+        <div class="loc__card " id="australia">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3520.2653375048115!2d152.5569167849206!3d-31.703265681309456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9b68a123456789%3A0x8e3d789a654321!2s19%20Balonne%20St%2C%20Harrington%20NSW%202443%2C%20Australia!5e0!3m2!1sen!2sus!4v1699632901234!5m2!1sen!2sus"
             width="350"
@@ -106,7 +106,7 @@
 
 
  
-        <div class="loc__card ">
+        <div class="loc__card " id="uk">
           <div class="loc__text">
             <h2>United Kingdom</h2>
             <div class="location-subtitle">
@@ -176,8 +176,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : +1 253-863-8967 <br />
-            M : contact@designo.co
+            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
             <svg
