--- a/pages/webdesign/webdesign.html
+++ b/pages/webdesign/webdesign.html
@@ -195,8 +195,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : +1 253-863-8967 <br />
-            M : contact@designo.co
+            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
             <svg
