refactor footer and hero sections for improved responsiveness and layout

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <div class="hero__container">
           <div class="hero__text">
             <h1 class="hero__title">
-              Award-winning custom designs and digital branding solutions
+              Award-winning custom <br />designs and digital <br />
+              branding solutions
             </h1>
             <p class="hero__subtitle">
               With over 10 years in the industry, we are experienced in creating
@@ -101,12 +102,14 @@
               src="./images/home/desktop/illustration-passionate.svg"
               alt=""
             />
-            <h4 class="illustration__title">PASSIONATE</h4>
-            <p class="illustration__subtitle">
-              Each project starts with an in-depth brand research to ensure we
-              only create products that serve a purpose. We merge art, design,
-              and technology into exciting new solutions.
-            </p>
+            <div>
+              <h4 class="illustration__title">PASSIONATE</h4>
+              <p class="illustration__subtitle">
+                Each project starts with an in-depth brand research to ensure we
+                only create products that serve a purpose. We merge art, design,
+                and technology into exciting new solutions.
+              </p>
+            </div>
           </div>
           <div class="illustration__card">
             <img
@@ -114,12 +117,14 @@
               src="./images/home/desktop/illustration-resourceful.svg"
               alt=""
             />
-            <h4 class="illustration__title">PASSIONATE</h4>
-            <p class="illustration__subtitle">
-              Each project starts with an in-depth brand research to ensure we
-              only create products that serve a purpose. We merge art, design,
-              and technology into exciting new solutions.
-            </p>
+            <div>
+              <h4 class="illustration__title">PASSIONATE</h4>
+              <p class="illustration__subtitle">
+                Each project starts with an in-depth brand research to ensure we
+                only create products that serve a purpose. We merge art, design,
+                and technology into exciting new solutions.
+              </p>
+            </div>
           </div>
           <div class="illustration__card">
             <img
@@ -127,19 +132,21 @@
               src="./images/home/desktop/illustration-friendly.svg"
               alt=""
             />
-            <h4 class="illustration__title">PASSIONATE</h4>
-            <p class="illustration__subtitle">
-              Each project starts with an in-depth brand research to ensure we
-              only create products that serve a purpose. We merge art, design,
-              and technology into exciting new solutions.
-            </p>
+            <div>
+              <h4 class="illustration__title">PASSIONATE</h4>
+              <p class="illustration__subtitle">
+                Each project starts with an in-depth brand research to ensure we
+                only create products that serve a purpose. We merge art, design,
+                and technology into exciting new solutions.
+              </p>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- Let’s talk about your project -->
       <section class="aboutproject container">
-        <div class="aboutproject__container ">
+        <div class="aboutproject__container">
           <div class="aboutproject__text">
             <h2 class="aboutproject__title">Let’s talk about your project</h2>
             <p class="aboutproject__subtitle">
@@ -180,7 +187,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            Contact Us (Central Office) <br />P :
+            <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
             M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
