refactor footer, header, and index styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
     <header class="siteheader">
       <div class="siteheader__container container">
         <a href="index.html">
-          <img src="./images/shared/desktop/logo-dark.png" alt="Logo" />
+          <img
+            class="siteheader__logo"
+            src="./images/shared/desktop/logo-dark.png"
+            alt="Logo"
+          />
         </a>
+        <img
+          class="siteheader__burger"
+          src="./images/shared/mobile/icon-hamburger.svg"
+          alt="icon-hamburger"
+        />
+
         <nav class="siteheader__nav">
           <ul class="siteheader__nav-list">
             <li class="list-item">
@@ -102,7 +112,7 @@
               src="./images/home/desktop/illustration-passionate.svg"
               alt=""
             />
-            <div>
+            <div class="illustration__text">
               <h4 class="illustration__title">PASSIONATE</h4>
               <p class="illustration__subtitle">
                 Each project starts with an in-depth brand research to ensure we
@@ -117,7 +127,7 @@
               src="./images/home/desktop/illustration-resourceful.svg"
               alt=""
             />
-            <div>
+            <div class="illustration__text">
               <h4 class="illustration__title">PASSIONATE</h4>
               <p class="illustration__subtitle">
                 Each project starts with an in-depth brand research to ensure we
@@ -132,7 +142,7 @@
               src="./images/home/desktop/illustration-friendly.svg"
               alt=""
             />
-            <div>
+            <div class="illustration__text">
               <h4 class="illustration__title">PASSIONATE</h4>
               <p class="illustration__subtitle">
                 Each project starts with an in-depth brand research to ensure we
