refactor header and layout styles for improved responsiveness and alignment

--- a/pages/graphicdesign/graphicdesign.html
+++ b/pages/graphicdesign/graphicdesign.html
@@ -29,8 +29,17 @@
     <header class="siteheader">
       <div class="siteheader__container container">
         <a href="../../index.html">
-          <img src="../../images/shared/desktop/logo-dark.png" alt="Logo" />
+          <img
+            class="siteheader__logo"
+            src="../../images/shared/desktop/logo-dark.png"
+            alt="Logo"
+          />
         </a>
+        <img
+          class="siteheader__burger"
+          src="../../images/shared/mobile/icon-hamburger.svg"
+          alt="icon-hamburger"
+        />
         <nav class="siteheader__nav">
           <ul class="siteheader__nav-list">
             <li class="list-item">
@@ -74,7 +83,10 @@
           </p>
         </div>
         <div class="graphic__card">
-          <img src="../../images/graphic-design/desktop/image-change.jpg" alt="" />
+          <img
+            src="../../images/graphic-design/desktop/image-change.jpg"
+            alt=""
+          />
           <h3>EYECAM</h3>
           <p>
             Product that lets you edit your favorite <br />
@@ -82,7 +94,10 @@
           </p>
         </div>
         <div class="graphic__card">
-          <img src="../../images/graphic-design/desktop/image-science.jpg" alt="" />
+          <img
+            src="../../images/graphic-design/desktop/image-science.jpg"
+            alt=""
+          />
           <h3>FACEIT</h3>
           <p>
             Get to meet your favorite internet <br />
@@ -158,7 +173,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            Contact Us (Central Office) <br />P :
+            <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
             M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
