--- a/pages/locations/locations.html
+++ b/pages/locations/locations.html
@@ -29,8 +29,13 @@
     <header class="siteheader">
       <div class="siteheader__container container">
         <a href="../../index.html">
-          <img src="../../images/shared/desktop/logo-dark.png" alt="Logo" />
+          <img class="siteheader__logo" src="../../images/shared/desktop/logo-dark.png" alt="Logo" />
         </a>
+        <img
+          class="siteheader__burger"
+          src="../images/shared/mobile/icon-hamburger.svg"
+          alt="icon-hamburger"
+        />
         <nav class="siteheader__nav">
           <ul class="siteheader__nav-list">
             <li class="list-item">
