--- a/pages/webdesign/webdesign.html
+++ b/pages/webdesign/webdesign.html
@@ -29,8 +29,17 @@
     <header class="siteheader">
       <div class="siteheader__container container">
         <a href="../../index.html">
-          <img src="../../images/shared/desktop/logo-dark.png" alt="Logo" />
+          <img
+            class="siteheader__logo"
+            src="../../images/shared/desktop/logo-dark.png"
+            alt="Logo"
+          />
         </a>
+        <img
+          class="siteheader__burger"
+          src="../../images/shared/mobile/icon-hamburger.svg"
+          alt="icon-hamburger"
+        />
         <nav class="siteheader__nav">
           <ul class="siteheader__nav-list">
             <li class="list-item">
@@ -195,7 +204,8 @@
             <br />Toronto, Ontario M9C 3J5
           </p>
           <p class="sitefooter__contact">
-            Contact Us (Central Office) <br />P : <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
+            Contact Us (Central Office) <br />P :
+            <a href="tel:+1 253-863-8967">+1 253-863-8967</a> <br />
             M : <a href="mailto:contact@designo.co">contact@designo.co</a>
           </p>
           <div class="sitefooter__socials">
